--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,25 @@ html, body {
 body {
   margin: 0;
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px; 
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: hidden;
+  border-radius: 5px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgba(200,200,200,0.1);
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(200,200,200,0.2);
+}
